--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@types/leaflet": "^1.9.20",
     "axios": "^1.12.2",
     "leaflet": "^1.9.4",
