--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@radix-ui/react-collapsible": "^1.1.12",
+    "@chakra-ui/react": "^3.27.1",
+    "@emotion/react": "^11.14.0",
     "@types/leaflet": "^1.9.20",
     "axios": "^1.12.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-draw": "^0.21.0"
   },
